<?xml version="1.0"?>
<package format="2">
  <name>linear_feedback_controller_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS msgs that interface the linear_feedback_controller package.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url>https://github.com/loco-3d/ros-wbmpc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_conversions</depend>

  <test_depend>rospy</test_depend>
  <test_depend>gtest</test_depend>

</package>
