<package format="3">
  <name>ros_wbmpc_msgs</name>
  <version>0.0.0</version>
  <description>
    ros-wbmpc server/client messages and services.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD</license>
  <url>https://github.com/loco-3d/ros-wbmpc</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <test_depend condition="$ROS_VERSION == 1">rospy</test_depend>
  <test_depend condition="$ROS_VERSION == 2">rclpy</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>