<package format="3">
  <name>ros-wbmpc</name>
  <version>0.0.0</version>
  <description>
    Whole Body MPC interface between the middleware ROS and the low level control.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD</license>
  <url>https://github.com/loco-3d/ros-wbmpc</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  
  <depend>ros_wbmpc_msgs</depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>